Create button component

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -19,9 +19,7 @@
               Daniel Radcliffe became a global star in the film industry due to
               his performance in which film franchise?
             </h2>
-            <button class="card__button-answer" type="button">
-              Show answer
-            </button>
+            <button class="button" type="button">Show answer</button>
             <p class="card__answer">Harry Potter</p>
             <ul class="card__tag-list">
               <li class="card__tag-list-item">#danielradcliffe</li>
